--- a/hoje.html
+++ b/hoje.html
@@ -34,18 +34,21 @@ html, body {
   width:95%;
   max-width:1400px;
   margin:30px auto;
-  text-align:center; /* centraliza o conteúdo inline-block */
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* centraliza o conteúdo horizontalmente */
 }
 
 .ibovespa-box {
   border: 1px solid #000;
   padding: 15px 30px;
   margin-bottom: 25px;
-  display: inline-block;
+  display: inline-block; /* muda para inline-block para centralizar */
   font-family: "Montserrat", sans-serif;
   background-color: #f9f9f9;
   border-radius: 4px;
-  text-align: left; /* para o texto interno ficar alinhado à esquerda, mas pode ser centralizado se preferir */
+  text-align: center; /* centraliza o texto interno */
+  min-width: 250px;
 }
 
 .ibovespa-box div {
@@ -60,7 +63,7 @@ html, body {
 .ibovespa-box .value {
   font-weight: 700;
   color: #164CAD;
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 .table-title {
@@ -69,12 +72,14 @@ html, body {
   font-family:"Montserrat";
   font-size:18px;
   color:#1E4DB7;
+  width: 100%;
 }
 
 .table-wrapper {
   overflow-x:auto;
   border-radius:8px;
   box-shadow:0 2px 8px rgba(0,0,0,0.1);
+  width: 100%;
 }
 
 .hoje-table {
@@ -113,8 +118,7 @@ html, body {
 
 <!-- Quadro da Variação do Ibovespa -->
 <div id="ibovespaBox" class="ibovespa-box">
-  <div><span class="label">Ibovespa Hoje:</span> <span class="value" id="ibovespaValor">carregando...</span></div>
-  <div><span class="label">Variação:</span> <span class="value" id="ibovespaVar">carregando...</span></div>
+  <div>Carregando...</div>
 </div>
 
 <div class="table-title">
@@ -197,7 +201,6 @@ function parseCSV(texto) {
 // Converte string com possível vírgula e % para número
 function extrairNumero(valor) {
   if (!valor || valor.trim() === '') return NaN;
-  // Remove espaços, substitui vírgula por ponto, remove % se houver
   let str = valor.trim().replace(/\s+/g, '');
   str = str.replace(',', '.');
   str = str.replace('%', '');
@@ -207,22 +210,28 @@ function extrairNumero(valor) {
 
 function formatarPercentual(valor) {
   if (valor === undefined || valor === null || valor === '') return '-';
-  // Se for número, já converte
   let num;
   if (typeof valor === 'number') {
     num = valor;
   } else {
-    // Tenta extrair número de string
     num = extrairNumero(valor);
   }
   if (isNaN(num)) return '-';
-  return num.toFixed(2).replace('.', ',') + '%';
+  return num.toFixed(2) + '%';
 }
 
-// Formata número no padrão brasileiro: 1.234,56
-function formatarNumeroBR(num) {
-  if (isNaN(num)) return '-';
-  return num.toFixed(2).replace('.', ',').replace(/\B(?=(\d{3})+(?!\d))/g, '.');
+// Formata número no padrão brasileiro: XXX.XXX,XX (com pontos de milhar e vírgula decimal)
+function formatarValorMonetario(valor) {
+  if (isNaN(valor) || valor === null || valor === undefined) return '-';
+  // Arredonda para 2 casas decimais
+  let num = Math.round(valor * 100) / 100;
+  // Separa parte inteira e decimal
+  let partes = num.toFixed(2).split('.');
+  let inteiro = partes[0];
+  let decimal = partes[1];
+  // Adiciona pontos de milhar
+  inteiro = inteiro.replace(/\B(?=(\d{3})+(?!\d))/g, '.');
+  return inteiro + ',' + decimal;
 }
 
 async function carregarDados() {
@@ -250,26 +259,37 @@ async function carregarDados() {
       return;
     }
 
-    // --- Extrair valor do Ibovespa (linha 198, coluna 1) ---
-    let ibovespaValorNum = NaN;
-    if (linhasVar.length > 198) {
-      const valor = linhasVar[198] && linhasVar[198].length > 1 ? linhasVar[198][1] : null;
-      ibovespaValorNum = extrairNumero(valor);
-    }
-    document.getElementById("ibovespaValor").innerText = formatarNumeroBR(ibovespaValorNum);
+    // --- Valores para o quadro Ibovespa (linhas 198 e 199, coluna 1) ---
+    let ibovespaHoje = NaN;
+    let ibovespaAnterior = NaN;
 
-    // --- Cálculo da Variação do Ibovespa (linhas 198 e 199, coluna 1) ---
-    let variacaoIbovespaNum = NaN;
-    if (linhasVar.length > 199) {
-      const valor1 = linhasVar[198] && linhasVar[198].length > 1 ? linhasVar[198][1] : null;
-      const valor2 = linhasVar[199] && linhasVar[199].length > 1 ? linhasVar[199][1] : null;
-      const num1 = extrairNumero(valor1);
-      const num2 = extrairNumero(valor2);
-      if (!isNaN(num1) && !isNaN(num2) && num2 !== 0) {
-        variacaoIbovespaNum = ((num1 / num2) - 1) * 100;
-      }
+    if (linhasVar.length > 198) {
+      // Linha 198, coluna 1 (índice 1)
+      const valor198 = linhasVar[198] && linhasVar[198].length > 1 ? linhasVar[198][1] : null;
+      ibovespaHoje = extrairNumero(valor198);
     }
-    document.getElementById("ibovespaVar").innerText = formatarPercentual(variacaoIbovespaNum);
+    if (linhasVar.length > 199) {
+      // Linha 199, coluna 1 (índice 1)
+      const valor199 = linhasVar[199] && linhasVar[199].length > 1 ? linhasVar[199][1] : null;
+      ibovespaAnterior = extrairNumero(valor199);
+    }
+
+    // Formata o valor do Ibovespa hoje
+    const ibovespaHojeFormatado = formatarValorMonetario(ibovespaHoje);
+
+    // Calcula variação percentual
+    let variacaoIbovespa = '-';
+    if (!isNaN(ibovespaHoje) && !isNaN(ibovespaAnterior) && ibovespaAnterior !== 0) {
+      variacaoIbovespa = ((ibovespaHoje / ibovespaAnterior) - 1) * 100;
+    }
+    const variacaoFormatada = formatarPercentual(variacaoIbovespa);
+
+    // Preenche o quadro
+    const ibovespaBox = document.getElementById("ibovespaBox");
+    ibovespaBox.innerHTML = `
+      <div><span class="label">Ibovespa Hoje:</span> <span class="value">${ibovespaHojeFormatado}</span></div>
+      <div><span class="label">Variação:</span> <span class="value">${variacaoFormatada}</span></div>
+    `;
 
     // --- Mapa ação -> setor a partir das colunas 138..268 (linhas 0 e 1) da planilha principal ---
     const acaoParaSetor = {};
@@ -320,7 +340,7 @@ async function carregarDados() {
           const variacaoNum = extrairNumero(variacaoRaw);
           const variacaoFormatada = formatarPercentual(variacaoNum);
 
-          // Contribuição (quinta coluna) = peso * variação / 100
+          // Contribuição = (peso * variação) / 100
           let contribuicaoNum = NaN;
           if (!isNaN(pesoNum) && !isNaN(variacaoNum)) {
             contribuicaoNum = (pesoNum * variacaoNum) / 100;
@@ -350,8 +370,8 @@ async function carregarDados() {
     console.error("Erro ao carregar dados:", erro);
     const tbody = document.getElementById("tabelaHojeBody");
     tbody.innerHTML = '<tr><td colspan="6" style="color:red;">Erro ao carregar dados. Verifique o console.</td></tr>';
-    document.getElementById("ibovespaValor").innerText = 'Erro';
-    document.getElementById("ibovespaVar").innerText = 'Erro';
+    const ibovespaBox = document.getElementById("ibovespaBox");
+    ibovespaBox.innerHTML = '<div>Erro ao carregar dados</div>';
   }
 }
 
